[gd_scene load_steps=62 format=3 uid="uid://b3d3rovgrbsqh"]

[ext_resource type="Script" path="res://assets/objects/enemies/arachnoxenomorph/arachnoxenomorph.gd" id="1_8ist1"]
[ext_resource type="Texture2D" uid="uid://dfhrbs31qd72y" path="res://assets/objects/enemies/arachnoxenomorph/textures/tranform_stone.png" id="1_n8sos"]
[ext_resource type="Texture2D" uid="uid://d341an48s2xie" path="res://assets/objects/enemies/arachnoxenomorph/textures/idle_l.png" id="1_ysdx1"]
[ext_resource type="Texture2D" uid="uid://3cpro823wseh" path="res://assets/objects/enemies/arachnoxenomorph/textures/idle_r.png" id="2_nx073"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyd6d"]
size = Vector2(17, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtil3"]
atlas = ExtResource("1_ysdx1")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_srrhu"]
atlas = ExtResource("1_ysdx1")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_afcjr"]
atlas = ExtResource("1_ysdx1")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlje8"]
atlas = ExtResource("1_ysdx1")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx68w"]
atlas = ExtResource("1_ysdx1")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1rre"]
atlas = ExtResource("2_nx073")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nx00"]
atlas = ExtResource("2_nx073")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj0a3"]
atlas = ExtResource("2_nx073")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x05u"]
atlas = ExtResource("2_nx073")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fql7"]
atlas = ExtResource("2_nx073")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7rx1"]
atlas = ExtResource("1_n8sos")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6h14"]
atlas = ExtResource("1_n8sos")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeut6"]
atlas = ExtResource("1_n8sos")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_60f42"]
atlas = ExtResource("1_n8sos")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xk2k"]
atlas = ExtResource("1_n8sos")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1nft"]
atlas = ExtResource("1_n8sos")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp4vm"]
atlas = ExtResource("1_n8sos")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yai0v"]
atlas = ExtResource("1_n8sos")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_08ll5"]
atlas = ExtResource("1_n8sos")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai22k"]
atlas = ExtResource("1_n8sos")
region = Rect2(216, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hx7tp"]
atlas = ExtResource("1_n8sos")
region = Rect2(240, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a82oh"]
atlas = ExtResource("1_n8sos")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_42klr"]
atlas = ExtResource("1_n8sos")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_87xb8"]
atlas = ExtResource("1_n8sos")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3oem"]
atlas = ExtResource("1_n8sos")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x4as"]
atlas = ExtResource("1_n8sos")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr7es"]
atlas = ExtResource("1_n8sos")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tre5q"]
atlas = ExtResource("1_n8sos")
region = Rect2(408, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eblx0"]
atlas = ExtResource("1_n8sos")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7way0"]
atlas = ExtResource("1_n8sos")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_r08mt"]
atlas = ExtResource("1_n8sos")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jkli"]
atlas = ExtResource("1_n8sos")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p67yk"]
atlas = ExtResource("1_n8sos")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdp0r"]
atlas = ExtResource("1_n8sos")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1665"]
atlas = ExtResource("1_n8sos")
region = Rect2(576, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_f2wme"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtil3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srrhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afcjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlje8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx68w")
}],
"loop": true,
"name": &"idle_l",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1rre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nx00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj0a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x05u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fql7")
}],
"loop": true,
"name": &"idle_r",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7rx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6h14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeut6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60f42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xk2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1nft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp4vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yai0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08ll5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai22k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hx7tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a82oh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42klr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87xb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3oem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0x4as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr7es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tre5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eblx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7way0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r08mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jkli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p67yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdp0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1665")
}],
"loop": true,
"name": &"transform_stone",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g4jqm"]
radius = 80.0

[sub_resource type="Animation" id="Animation_ov0bx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"transform_stone"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shape:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("shape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, 4.5)]
}

[sub_resource type="Animation" id="Animation_cqnyy"]
resource_name = "idle_l"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_l"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shape:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(16, 13), Vector2(16, 14), Vector2(16, 15), Vector2(16, 14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("shape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -0.5), Vector2(0, -1), Vector2(0, -1.5), Vector2(0, -1)]
}

[sub_resource type="Animation" id="Animation_j61fv"]
resource_name = "idle_r"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_r"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shape:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(16, 13), Vector2(16, 14), Vector2(16, 15), Vector2(16, 14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("shape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -0.5), Vector2(0, -1), Vector2(0, -1.5), Vector2(0, -1)]
}

[sub_resource type="Animation" id="Animation_trhib"]
resource_name = "stone"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"transform_stone"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shape:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(17, 5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("shape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-0.5, 4.5)]
}

[sub_resource type="Animation" id="Animation_8vjad"]
resource_name = "transform_idle"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"transform_stone"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shape:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -0.5), Vector2(0, 0), Vector2(0, 0.5), Vector2(0, 0), Vector2(0, -0.5), Vector2(0, -1.5), Vector2(0, -1), Vector2(0, -0.5), Vector2(0, 0), Vector2(-0.5, 2.5), Vector2(-0.5, 2), Vector2(-0.5, 1.5), Vector2(-0.5, 1), Vector2(-0.5, 1.5), Vector2(-0.5, 4.5), Vector2(-0.5, 4.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("shape:shape:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(16, 13), Vector2(16, 12), Vector2(16, 11), Vector2(16, 12), Vector2(16, 13), Vector2(16, 13), Vector2(16, 14), Vector2(16, 15), Vector2(16, 14), Vector2(17, 9), Vector2(17, 10), Vector2(17, 11), Vector2(17, 12), Vector2(17, 11), Vector2(17, 5), Vector2(17, 5)]
}

[sub_resource type="Animation" id="Animation_uqqxs"]
resource_name = "transform_stone"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"transform_stone"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shape:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(17, 5), Vector2(17, 5), Vector2(17, 11), Vector2(17, 12), Vector2(17, 11), Vector2(17, 10), Vector2(17, 9), Vector2(17, 15), Vector2(17, 14), Vector2(16, 13), Vector2(16, 13), Vector2(16, 12), Vector2(16, 11), Vector2(16, 12), Vector2(16, 13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("shape:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-0.5, 4.5), Vector2(-0.5, 4.5), Vector2(-0.5, 1.5), Vector2(-0.5, 1), Vector2(-0.5, 1.5), Vector2(-0.5, 2), Vector2(-0.5, 2.5), Vector2(-0.5, -0.5), Vector2(-0.5, -1), Vector2(0, -1.5), Vector2(0, -0.5), Vector2(0, 0), Vector2(0, 0.5), Vector2(0, 0), Vector2(0, -0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lb84n"]
_data = {
"RESET": SubResource("Animation_ov0bx"),
"idle_l": SubResource("Animation_cqnyy"),
"idle_r": SubResource("Animation_j61fv"),
"stone": SubResource("Animation_trhib"),
"transform_idle": SubResource("Animation_8vjad"),
"transform_stone": SubResource("Animation_uqqxs")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r8flm"]
animation = &"idle_l"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h6qct"]
animation = &"idle_r"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ak2mo"]
blend_point_0/node = SubResource("AnimationNodeAnimation_r8flm")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_h6qct")
blend_point_1/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lja7y"]
animation = &"transform_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ua4st"]
animation = &"stone"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_74u43"]
animation = &"transform_stone"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sqklo"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mngxt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mt8vm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6u5fq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0kncq"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mo1ml"]
states/Start/position = Vector2(186.667, 106.305)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_ak2mo")
states/idle/position = Vector2(693.333, 105.591)
states/idle_to_stone/node = SubResource("AnimationNodeAnimation_lja7y")
states/idle_to_stone/position = Vector2(527.111, 152.667)
states/stone/node = SubResource("AnimationNodeAnimation_ua4st")
states/stone/position = Vector2(333.333, 105.826)
states/stone_to_idle/node = SubResource("AnimationNodeAnimation_74u43")
states/stone_to_idle/position = Vector2(526.815, 52.0521)
transitions = ["stone_to_idle", "idle", SubResource("AnimationNodeStateMachineTransition_sqklo"), "Start", "stone", SubResource("AnimationNodeStateMachineTransition_mngxt"), "stone", "stone_to_idle", SubResource("AnimationNodeStateMachineTransition_mt8vm"), "idle", "idle_to_stone", SubResource("AnimationNodeStateMachineTransition_6u5fq"), "idle_to_stone", "stone", SubResource("AnimationNodeStateMachineTransition_0kncq")]

[node name="arachnoxenomorph" type="CharacterBody2D"]
collision_mask = 0
motion_mode = 1
script = ExtResource("1_8ist1")

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_hyd6d")

[node name="texture" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_f2wme")
animation = &"transform_stone"

[node name="enable_process" type="VisibleOnScreenEnabler2D" parent="."]

[node name="detection" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="shape" type="CollisionShape2D" parent="detection"]
visible = false
shape = SubResource("CircleShape2D_g4jqm")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lb84n")
}

[node name="anim_blend" type="AnimationTree" parent="."]
deterministic = false
libraries = {
"": SubResource("AnimationLibrary_lb84n")
}
tree_root = SubResource("AnimationNodeStateMachine_mo1ml")
anim_player = NodePath("../anim")
parameters/idle/blend_position = Vector2(0.0788863, 0.115108)

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
